--- a/auth/package.json
+++ b/auth/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.19",
+    "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
+    "mongoose": "^8.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   }
